# mlops-zoomcamp

./: .gitignore  README.md  pyproject.toml
01-intro/: 01-intro-hw.ipynb
02-experiment-tracking/: hpo.py  mlflow.db  register_model.py  train.py
