[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Martin Ezequiel Langberg <martinlangberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
pyarrow = "15.0.2"
mlflow = "^2.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
